fixed mobile responsive layout. Need to make links for projects; can wrap the h3 w/ an <a> but it only makes the words clickable.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,42 +20,56 @@ main{
 }
 
 header {
+    background: var(--colorText);
     display: flex;
-    background-image: url("../images/background-2426328_1280.jpg");
     flex-direction: column;
-    align-items: center;
-    height: 200px;
+    flex-grow: 1;
+    align-content: center;
+    height: max-content;
 }
 
 header h1 {
     background: var(--colorBorder);
+    flex-grow: 1;
+    font-size: 1.7rem;
     height: 60px;
     padding: 13px 0 0 5px;
     margin-top: 10px;
-    width: 300px;
+    
 }
 
 header h2 {
+    align-self: center;
     background: var(--colorBorder);
-    font-size: 2rem;
-    height: 60px;
-    position: absolute;
+    font-size: 1.5rem;
+    height: 50px;
     padding: 2px 10px;
-    right: 7%;
-    top: 65%;
+    
     width: max-content;
+}
+div.image{
+    background-image: url("../images/background-2426328_1280.jpg");
+    height: 130px;
+    flex-grow: 1;
+}
+header h3{
+    background: var(--colorMainBack);
 }
 
 header p{
+    background: var(--colorMainBack);
     text-align: center;
-    margin: 10px 5%;
+    padding: 10px 5px;
+    /* margin: 10px 5%; */
 }
 
 nav {
-    background:rgb(40, 51, 51);
+    background: var(--colorText);
     display: flex;
+    flex-direction: column;
+    flex-grow: 1;
     justify-content: center;
-    width: 100%;
+    /* width: 100%; */
 }
 
 nav a{
@@ -72,7 +86,11 @@ nav li{
     display:flex;
     height: 50px;
     justify-content: center;
-    width: 100vw;
+    /* width: 100vw; */
+}
+
+#about {
+    display:none;
 }
 
 #sideBar {
@@ -81,6 +99,10 @@ nav li{
 
 #aboutMeLg {
     display:none;
+}
+
+#midContent{
+    width: 100%;
 }
 
 #cardContainer {
@@ -158,8 +180,10 @@ nav li{
 footer {
     justify-content: flex-start;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     height: min-content;
+    padding: 0 0 7px 7px;
     width: 100%;
 }
 
@@ -172,7 +196,57 @@ footer a{
     color: var(--colorText);
 }
 
+#contactInfo {
+    display:flex;
+    flex-direction: column;
+}
+
+
+/* ---------------first breack point------------------ */
+
 @media screen and (min-width: 475px){
+
+header h1{
+    width: 300px;
+}
+
+header h2 {
+    position: absolute;
+    top: 32%;
+    right: 1.3%;
+    z-index: 1;
+}
+
+nav {
+    /* align-self: flex-start; */
+    display: flex;
+    flex-direction: row;
+    /* flex-grow: 1; */
+    height: max-content;
+    position:absolute;
+    top: 0vh;
+    right: 0vw;
+    /* justify-content: space-between; */
+    /* justify-self: flex-end; */
+    width: max-content;
+}
+
+nav ul {
+    align-items: flex-start;
+    display: flex;
+    height: 80px;
+    margin-right: 5px;
+}
+
+nav li{
+    max-width: max-content;
+    margin-left: 8px;
+}
+
+nav a {
+    margin-bottom: -5px;
+}
+
 
 #card1 {
     flex: 1 1 100%;
@@ -193,38 +267,25 @@ footer {
     }
 }
 
+/* ----------------Second breack point-------------------- */
+
 @media screen and (min-width: 1200px){
     
     
     header {
-        align-items: flex-start;
-        flex-direction: row;
         width: 100%;
+    }
+
+    header h2 {
+        
+        top: 65%;
+        right: 1.5%;
+        z-index:1;
     }
 
     #aboutMe,
     header h3 {
         display: none;
-    }
-
-    nav {
-        display: flex;
-        flex-direction: row;
-        height: max-content;
-        justify-content: space-between;
-        width: 100%;
-    }
-    
-    nav ul {
-        align-items: flex-start;
-        display: flex;
-        height: 80px;
-        margin-right: 5px;
-    }
-
-    nav li{
-        max-width: max-content;
-        margin-left: 8px;
     }
 
     #sideBar h3,
@@ -330,6 +391,7 @@ footer {
         /* align-items: space-around;
         display: flex;
         justify-content: center; */
+        flex-direction: row;
         padding: 50px 60px; 
     }
 
